logs/CVE-2017-13081_10_4/log-error
make[1]: *** No rule to make target 'bss_load.o', needed by 'libap.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
In file included from ap_config.h:14:0,
                 from hostapd.h:13,
                 from accounting.c:16:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from ap_config.h:14:0,
                 from hostapd.h:13,
                 from beacon.c:27:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from wpa_auth.h:14:0,
                 from ap_mlme.c:16:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
make[1]: [ap_mlme.o] Error 1 (ignored)
make[1]: [accounting.o] Error 1 (ignored)
In file included from wpa_auth.h:14:0,
                 from ap_config.c:18:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
make[1]: [beacon.o] Error 1 (ignored)
In file included from ap_config.h:14:0,
                 from hostapd.h:13,
                 from ap_list.c:18:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from ap_config.h:14:0,
                 from hostapd.h:13,
                 from ap_drv_ops.c:16:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from ap_config.h:14:0,
                 from hostapd.h:13,
                 from authsrv.c:17:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
make[1]: [authsrv.o] Error 1 (ignored)
make[1]: [ap_list.o] Error 1 (ignored)
make[1]: [ap_config.o] Error 1 (ignored)
make[1]: [ap_drv_ops.o] Error 1 (ignored)
make[1]: *** No rule to make target 'hw_features_common.o', needed by 'libcommon.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
make[1]: *** No rule to make target 'aes-siv.o', needed by 'libcrypto.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
make[1]: *** No rule to make target 'eap_eke_common.o', needed by 'libeap_common.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
make[1]: *** No rule to make target 'l2_packet_linux.o', needed by 'libl2_packet.a'.  Stop.
In file included from wpa.h:14:0,
                 from pmksa_cache.c:14:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
make[1]: [pmksa_cache.o] Error 1 (ignored)
In file included from ../rsn_supp/wpa.h:14:0,
                 from tdls.c:18:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from wpa.h:14:0,
                 from wpa_ft.c:16:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from wpa.h:14:0,
                 from preauth.c:12:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from wpa.h:14:0,
                 from wpa_ie.c:12:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from wpa.h:14:0,
                 from peerkey.c:19:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
In file included from wpa.h:14:0,
                 from wpa.c:17:
../common/wpa_common.h:197:10: error: 'WPA_IGTK_MAX_LEN' undeclared here (not in a function)
  u8 igtk[WPA_IGTK_MAX_LEN];
          ^
wpa.c: In function 'wpa_wnmsleep_install_key':
wpa.c:2715:6: warning: unused variable 'keyidx' [-Wunused-variable]
  u16 keyidx;
      ^
make[1]: [wpa_ie.o] Error 1 (ignored)
make[1]: [peerkey.o] Error 1 (ignored)
make[1]: [wpa_ft.o] Error 1 (ignored)
make[1]: [tdls.o] Error 1 (ignored)
make[1]: [preauth.o] Error 1 (ignored)
make[1]: [wpa.o] Error 1 (ignored)
ar: pmksa_cache.o: No such file or directory
make[1]: [librsn_supp.a] Error 1 (ignored)
make[1]: *** No rule to make target 'tlsv1_client_ocsp.o', needed by 'libtls.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
In file included from bignum.c:15:0:
libtommath.c: In function 'mp_exptmod':
libtommath.c:588:7: warning: variable 'dr' set but not used [-Wunused-but-set-variable]
   int dr;
       ^
make[1]: *** No rule to make target 'bitfield.o', needed by 'libutils.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
make[1]: *** No rule to make target 'wps_module_tests.o', needed by 'libwps.a'.  Stop.
make[1]: *** Waiting for unfinished jobs....
make: [all] Error 1 (ignored)
